--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,8 +31,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Not needed if lastUpdated is not enabled
-      # - uses: pnpm/action-setup@v2 # Uncomment this if you're using pnpm
-      # - uses: oven-sh/setup-bun@v1 # Uncomment this if you're using Bun
+      # - uses: pnpm/action-setup@v3 # Uncomment this block if you're using pnpm
+      #   with:
+      #     version: 9 # Not needed if you've set "packageManager" in package.json
+      - uses: oven-sh/setup-bun@v2 # Uncomment this if you're using Bun
+        with:
+          bun-version: latest
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -45,7 +49,8 @@ jobs:
         run: yarn install
       - name: Build with VitePress
         run: |
-          npm run docs:build # or pnpm docs:build / yarn docs:build / bun run docs:build
+          # npm run docs:build # or pnpm docs:build / yarn docs:build / bun run docs:build
+          bun run docs:build
           touch .vitepress/dist/.nojekyll
       - name: Cache packages
         uses: actions/cache@v4
